[gd_scene load_steps=22 format=3 uid="uid://dsdnp3clspk5n"]

[ext_resource type="Script" path="res://Scripts/Level_PlatformRiding.gd" id="1_1jnol"]
[ext_resource type="Texture2D" uid="uid://pa6cfib36ejr" path="res://Textures/Items/Levers/Wood/Lever_03.png" id="1_1vgj1"]
[ext_resource type="Texture2D" uid="uid://dyuc5t812erda" path="res://Textures/Tilesets/Fantasy/Forest/Forest_02.png" id="1_wuc2t"]
[ext_resource type="Texture2D" uid="uid://c5o1qtjjc3x3n" path="res://Textures/Tilesets/Fantasy/Forest/Forest_13.png" id="2_liykg"]
[ext_resource type="Texture2D" uid="uid://bek7mea774tle" path="res://Textures/Items/Levers/Wood/Lever_02.png" id="2_oj1pm"]
[ext_resource type="Texture2D" uid="uid://dvlphxi5i4lq5" path="res://Textures/Items/Levers/Wood/Lever_01.png" id="3_mrj3h"]
[ext_resource type="Texture2D" uid="uid://ctd8bogk5tv0" path="res://Textures/Tilesets/Fantasy/Forest/Forest_08.png" id="3_x6dvw"]
[ext_resource type="Texture2D" uid="uid://5i0cbyci7f2u" path="res://Textures/Tilesets/Fantasy/Forest/Forest_16.png" id="4_prgkx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6asiy"]
size = Vector2(102, 80)

[sub_resource type="Animation" id="Animation_pc0l6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_1vgj1")]
}

[sub_resource type="Animation" id="Animation_ygj63"]
resource_name = "Activate"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("1_1vgj1"), ExtResource("2_oj1pm"), ExtResource("3_mrj3h")]
}

[sub_resource type="Animation" id="Animation_h43fh"]
resource_name = "Deactivate"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("3_mrj3h"), ExtResource("2_oj1pm"), ExtResource("1_1vgj1")]
}

[sub_resource type="Animation" id="Animation_5f41a"]
resource_name = "Is_Active"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_mrj3h")]
}

[sub_resource type="Animation" id="Animation_hxodr"]
resource_name = "Not_Active"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_1vgj1")]
}

[sub_resource type="Animation" id="Animation_4s2y6"]
resource_name = "Is_Neutral"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_oj1pm")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gdflf"]
_data = {
"Activate": SubResource("Animation_ygj63"),
"Deactivate": SubResource("Animation_h43fh"),
"Is_Active": SubResource("Animation_5f41a"),
"Is_Neutral": SubResource("Animation_4s2y6"),
"Not_Active": SubResource("Animation_hxodr"),
"RESET": SubResource("Animation_pc0l6")
}

[sub_resource type="Animation" id="Animation_77eha"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wfjsm"]
resource_name = "Up_Down_1024"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1024), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ojk5w"]
resource_name = "Slide_Left_1024"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1024, 0)]
}

[sub_resource type="Animation" id="Animation_r6ndc"]
resource_name = "Un_Slide_Left_1024"
length = 10.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1024, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_re0yb"]
_data = {
"RESET": SubResource("Animation_77eha"),
"Slide_Left_1024": SubResource("Animation_ojk5w"),
"Un_Slide_Left_1024": SubResource("Animation_r6ndc"),
"Up_Down_1024": SubResource("Animation_wfjsm")
}

[node name="Platform_Riding" type="Node2D"]
script = ExtResource("1_1jnol")

[node name="Platform" type="AnimatableBody2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="Lever" type="Node2D" parent="Platform"]
position = Vector2(462, -98)

[node name="Area2D" type="Area2D" parent="Platform/Lever"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Lever/Area2D"]
shape = SubResource("RectangleShape2D_6asiy")

[node name="Sprite" type="Sprite2D" parent="Platform/Lever"]
rotation = -1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_1vgj1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform/Lever"]
libraries = {
"": SubResource("AnimationLibrary_gdflf")
}

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Platform"]
position = Vector2(319.5, 95.5)
polygon = PackedVector2Array(-319.5, 32.5, 192.5, 32.5, 240.5, -40.5, 320.5, -159.5, 320.5, -282.5, 192.5, -282.5, 192.5, -95.5, -319.5, -95.5)

[node name="01_01" type="TextureRect" parent="Platform"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_wuc2t")

[node name="01_02" type="TextureRect" parent="Platform"]
offset_left = 128.0
offset_right = 256.0
offset_bottom = 128.0
texture = ExtResource("1_wuc2t")

[node name="01_03" type="TextureRect" parent="Platform"]
offset_left = 256.0
offset_right = 384.0
offset_bottom = 128.0
texture = ExtResource("1_wuc2t")

[node name="01_04" type="TextureRect" parent="Platform"]
offset_left = 384.0
offset_right = 512.0
offset_bottom = 128.0
texture = ExtResource("1_wuc2t")

[node name="01_05" type="TextureRect" parent="Platform"]
offset_left = 512.0
offset_right = 640.0
offset_bottom = 128.0
texture = ExtResource("2_liykg")

[node name="00_05" type="TextureRect" parent="Platform"]
offset_left = 512.0
offset_top = -128.0
offset_right = 640.0
texture = ExtResource("4_prgkx")

[node name="-01_05" type="TextureRect" parent="Platform"]
offset_left = 512.0
offset_top = -256.0
offset_right = 640.0
offset_bottom = -128.0
texture = ExtResource("3_x6dvw")
flip_v = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_re0yb")
}

[connection signal="body_entered" from="Platform/Lever/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Platform/Lever/Area2D" to="Platform/Lever" method="_on_area_2d_body_entered" flags=18]
[connection signal="body_exited" from="Platform/Lever/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_exited" from="Platform/Lever/Area2D" to="Platform/Lever" method="_on_area_2d_body_exited" flags=18]
[connection signal="animation_finished" from="Platform/Lever/AnimationPlayer" to="." method="_on_lever_animation_player_animation_finished"]
[connection signal="animation_finished" from="Platform/Lever/AnimationPlayer" to="Platform/Lever" method="_on_animation_player_animation_finished" flags=18]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_platform_animation_player_animation_finished"]
